# python-hamqth

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  Pipfile  README.md  setup.cfg  setup.py
docs/: index.md
hamqth/: __init__.py  clients.py  exceptions.py  utils.py
hamqth/tests/: mock_responses.py  test_clients.py
tests/: test_clients.py
