[metadata]
name = hamqth
version = file: VERSION
description = A HamQTH client.
long_description = file: README.md
url = https://gitlab.com/ryanbalfanz/python-hamqth
author = Ryan Balfanz
author_email = ryan@ryanbalfanz.net
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
install_requires =
    requests
tests_require =
    nosetests

[options.packages.find]
exclude =
    tests
